{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3d639d6d-140f-4678-80f0-05fb130a53bc",
            "actions": [
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "c5d0656b-ad1f-4a39-a2dc-a313aaf0ee28",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryClick",
                    "type": "Button",
                    "id": "e1802615-130e-4e10-a4ff-fb8a3348b20f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "2056ef93-7465-4b35-94f7-6d33adc2e132",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TestMove",
                    "type": "Button",
                    "id": "7284d5d4-ae2c-4d13-9a21-6bf47e9fbe1a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ab84b5d6-0d4d-4f14-bb55-5b75c1834937",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75c74d4f-e640-4acb-9554-3ae65732d9f3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e125d410-9fa1-4d76-83aa-92da7944f175",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e9a2cc0f-e99c-4ae4-a596-b58abbd4144b",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TestMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}